--- a/site/static/admin/config.yml
+++ b/site/static/admin/config.yml
@@ -2,6 +2,13 @@ backend:
   name: github
   repo: dindinet/kaldi-coffee-cms
   branch: master
+media_library:
+  name: cloudinary
+  config:
+    cloud_name: dklongley
+    api_key: 325856925759214
+    multiple: true  
+  
 
 media_folder: "site/static/img" # Folder where user uploaded files should go
 public_folder: "img"
