--- a/site/static/admin/config.yml
+++ b/site/static/admin/config.yml
@@ -5,9 +5,10 @@ backend:
 media_library:
   name: cloudinary
   config:
-    cloud_name: dklongley
-    api_key: 325856925759214
-    multiple: true  
+    cloud_name: seuk
+    api_key: 873885784827685
+    username: sembcorpenergyuk@gmail.com
+    multiple: false 
 
 
 collections: # A list of collections the CMS should be able to edit
