--- a/site/static/admin/config.yml
+++ b/site/static/admin/config.yml
@@ -2,7 +2,12 @@ backend:
   name: github
   repo: dindinet/kaldi-coffee-cms
   branch: master
-
+media_library:
+  name: cloudinary
+  config:
+    cloud_name: dklongley
+    api_key: 325856925759214
+    multiple: true 
 
 
 collections: # A list of collections the CMS should be able to edit
